<resources>
    <string name="app_name">Mobil Gezi Rehberim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_harita">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_a__harita">Map</string>
    <string name="IletisimBilgilendirmeMetni">Dosya vb şeyler de göndermek için GÖNDER butonuna tıklayın. Varsayılan olarak açılan uygulamada belge de gönderebilirsiniz.</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hibrit</string>
    <string name="satellite_map">Uydu</string>
    <string name="terrain_map">Arazi</string>
    <string name="paylas_adres">Adres*</string>
    <string name="paylas_yorum">Yorum*</string>
    <string name="title_activity_harita_konuma_git">Map</string>
    <string name="paylas_taglar">#mgr #gezi #rehber #seyahat #mobilgezirehberim</string>
    <string name="paylas_yer_ismi">Yer İsmi*</string>
    <string name="paylas_tag">mgr gezi rehber seyahat mobilgezirehberim</string>
    <string name="paylas_koordinat">0.0,0.0*</string>
    <string name="paylas_sehir">Şehir</string>
    <string name="paylas_ekle">ekle</string>
    <string name="paylas_konum_sec">Konum\nSeç</string>
    <string name="paylas_gonder">gönder</string>
    <string name="error_occurred">Bir hata oluştu</string>
    <string name="image_not_selected">Resim seçilmedi</string>
    <string name="edit_profile">Profil Düzenle</string>
    <string name="account_create">Hesap Oluştur</string>
    <string name="contact">İletişim</string>
    <string name="postLocation">Gönderi Konumu</string>
    <string name="app_name_home">Mobil Gezi Rehberim</string>
    <string name="search">Ara</string>
    <string name="share">Paylaş</string>
    <string name="sended">Gönderildi</string>
    <string name="sharing">Paylaşan</string>
    <string name="updated">Güncellendi</string>
    <string name="date">Tarih</string>
    <string name="addres">Adres</string>
    <string name="labels">Etiketler</string>
    <string name="ok">TAMAM</string>
    <string name="login">Giriş</string>
    <string name="login_in">Giriş yapılıyor</string>
    <string name="my_account">Hesabım</string>
    <string name="reset_pass">Parola Sıfırla</string>
    <string name="my_locaiton">Konumum</string>
    <string name="gps_on">GPS Açık</string>
    <string name="map">Harita</string>
    <string name="map_key">harita</string>
    <string name="selected_new_location">Seçilen Yeni Konum</string>
    <string name="ı_love_mgr">MGR\'i Seviyorum</string>
    <string name="what_would_u_like_to_send_with">Ne ile göndermek istersiniz?</string>
    <string name="you_already_shared_this">Bunu zaten siz paylaştınız</string>
    <string name="passwords_are_not_the_same">Parolalar yanı değil</string>
    <string name="verification_link_sent">Doğrulama bağlantısı e-posta adresinizi gönderildi</string>
    <string name="fill_in_the_required_fields">Gerekli alanları doldurunuz</string>
    <string name="did_you_give_up">Vaz mı geçtin?</string>
    <string name="press_again_to_exit">Çıkmak için tekarar basın</string>
    <string name="check_your_e_mail">E-postanızı kontrol ediniz</string>
    <string name="please_select_city">Lütfen şehir seçin</string>
    <string name="location_status_new">Yeni Konum Seçildi</string>
    <string name="location_status_now">Konumun</string>
    <string name="not_allowed">İzin verilmedi</string>
    <string name="confirm_your_account_from_the_link_in_your_e_mail">E-postanızdaki bağlantıdan hesabınızı onaylayın</string>
    <string name="loremIpsum">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500\'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960\'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</string>

</resources>