<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/img_sharePictureSelected"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:onClick="img_paylasResimSec"
            android:src="@drawable/ic_baseline_photo_select" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/sv_share"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_sharePlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/paylas_yer_ismi"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_shareComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_edit_text"
                android:gravity="top"
                android:hint="@string/paylas_yorum"
                android:maxLength="4000"
                android:maxLines="5"
                android:textSize="15sp" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_contact_support_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="En fazla 5 etiket hakkınız bulunmaktadır."
                    android:padding="5dp"/>

            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_shareTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/paylas_tag"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_addTag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/paylas_ekle" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_printTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/paylas_taglar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_contact_support_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="Bilinen son koordinat ve adres bilgisi aşağıdadır." />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_edit_text"
                            android:hint="@string/paylas_koordinat"
                            android:inputType="text"
                            android:maxLength="140"
                            android:maxLines="1"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edt_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_edit_text"
                            android:hint="@string/paylas_sehir"
                            android:inputType="text"
                            android:maxLength="140"
                            android:maxLines="1"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/edt_addres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:hint="@string/paylas_adres"
                        android:inputType="text"
                        android:maxLength="140"
                        android:maxLines="1"
                        android:textSize="15sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/selectLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/paylas_konum_sec" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_shareSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button"
                android:onClick="btn_paylasGonder"
                android:text="@string/paylas_gonder" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

